# Liglo

./: .gitignore  README.md  Readle.cabal  TODO.md  ack.css  ack.html  asdf.css  asdf.dumb  asdf.html  asdf.url  help  help.html  hm  hoogley  list  notes  profile  qrun  real.css  run  scratch  show  stylingness.md
app/: Main.hs  Mortar.hs
src/: CSSBuilder.hs  CSSParser.hs  CSSTokenizer.hs  CharacterReferences.hs  HTMLBuilder.hs  HTMLParser.hs  Item.hs  Main.hs  Message.hs  Mortar.hs  Network.hs  SearchApp.hs  StyleStealer.hs  TextState.hs
test/: CSSParserTest.hs  CSSTokenizerTest.hs  HTMLBuilderTest.hs  HTMLParserTest.hs  Main.hs  MortarTest.hs
